@@ -100,6 +100,9 @@ jumpToTapesTip "Leave house and view your security tapes"
 undo "Undo"
 undoTip "Undo (Ctrl-Z)"
 
+eyedropperTip "Ctrl-click an object in your house to copy it"
+
+
 diffHighlightsOn "Turn change highlights on"
 diffHighlightsOff "Turn change highlights off"
 
