@@ -11,6 +11,9 @@ Version 15
 --Fixed bug in dogs stepping next to dead dogs that are next to other dead dogs
   (thanks Ludicrosity).
 
+--Added a visual status display to make Ctrl-click eyedropper functionality
+  more apparent.
+
 
 
 Version 14   Live Server Fixes
